2011-09-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	distuninstallcheck: fail also when only one file is left installed
	This change fixes automake bug#9579.
	* lib/am/distdir.am (distuninstallcheck): Be stricter in ignoring
	a potential `dir' file created by install-info and left installed.
	Also, be more careful about "this can't happen" kind of errors.
	(am__distuninstallcheck_listfiles): New internal helper macro.
	* tests/distcheck-pr9579.test: New test.
	* tests/distcheck-override-infodir.test: Likewise.
	* tests/Makefile.am (TESTS): Add them.
	* NEWS, THANKS: Update.
	Report by Nick Bowler.

2011-09-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix tests on aclocal search path precedences
	* tests/aclocal-path-precedence.test: Call `$ACLOCAL' with the
	proper overridden system acdir.

2011-09-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	* NEWS: Fix typo.

2011-09-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: document planned precedence changes in aclocal search path
	* doc/automake.texi (Macro Search Path): Explicitly state that the
	lookup order for extra directories of `.m4' files will be changed
	in the next major release.
	* NEWS: Likewise.

2011-09-19  Paolo Bonzini  <bonzini@gnu.org>
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	aclocal: handle ACLOCAL_PATH environment variable
	* aclocal.in (parse_ACLOCAL_PATH): New function, parse ACLOCAL_PATH
	as a colon-separated list of directories to be included in the
	search path.
	* doc/automake.texi (Macro Search Path): Document new behavior and
	the precedence rules for various elements of the search path.
	* tests/aclocal-path.test: New test.
	* tests/aclocal-path-install.test: Likewise.
	* tests/aclocal-path-install-serial.test: Likewise.
	* tests/aclocal-path-precedence.test: Likewise.
	* tests/aclocal-path-nonexistent.test: Likewise.
	* tests/Makefile.am (TESTS): Add them.
	* NEWS: Update.