@@ -1,3 +1,10 @@
+2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	maintcheck: fix spurious failure
+	* lib/am/distdir.am: Use `$(infodir)', not `${infodir}', to avoid
+	complaints from the `sc_no_brace_variable_expansions' maintainer
+	check.
+
 2011-09-26  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	distuninstallcheck: fail also when only one file is left installed
